# chatr

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  generate_offline.sh  publish.sh
.github/workflows/: release.yml
docs/: build_template_reference.cpp
src/: build_template_reference.cpp  chatbuildr.rs  legends.json  lib.rs  main.rs  markup.rs  pets.json  professions.json  specializations.json
wix/: main.wxs
