[package]
name = "chatr"
description = "A tool/lib to process and convert Guild Wars 2 build chat codes into other formats"
version = "0.6.8"
authors = ["Andy Berdan <contact@berdan.ca>"]
edition = "2021"
repository = "https://github.com/berdandy/chatr"
categories = ["command-line-utilities"]
keywords = ["guild-wars-2", "gw2", "chatcode"]
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.21.5"
deku = "0.16.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
