[package]
name = "chatr"
description = "A tool/lib to process and convert Guild Wars 2 build chat codes into other formats"
version = "0.6.16"
authors = ["Andy Berdan <contact@berdan.ca>"]
edition = "2021"
repository = "https://github.com/berdandy/chatr"
categories = ["command-line-utilities"]
keywords = ["guild-wars-2", "gw2", "chatcode"]
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "78968EC3-8733-4A8C-B99C-3FF6A60298CE"
path-guid = "5BD08CA1-A754-4989-9C0C-B3A29F888654"
license = false
eula = false

[dependencies]
base64 = "0.21.5"
deku = "0.16.0"
lazy_static = "1.4.0"
regex = "1.11.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
allow-dirty = ["ci"]
